<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_cashbook"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_cashbook" />
    <item
        android:id="@+id/nav_groups"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_groups" />
    <item
        android:id="@+id/nav_notes"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_notes" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_profile" />
</menu>
